[package]
name = "crossclip"
version = "0.6.0"
authors = ["Avi Weinstock <aweinstock314@gmail.com>", "Marius Cobzarenco <marius.cobzarenco@gmail.com>"]
description = "Crossclip is a cross-platform library for getting and setting the contents of the OS-level clipboard. It is a fork of rust-clipboard."
repository = "https://github.com/mcobzarenco/cliptard"
license = "MIT / Apache-2.0"
keywords = ["clipboard"]

[target.'cfg(windows)'.dependencies]
clipboard-win = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = "0.5.1"
